# my_libs

./: .gitignore  README.md
acync_requests/: README.md  pyproject.toml
acync_requests/acync_requests/: requests.py
async_requests/: pyproject.toml  setup.py
my_logger/: LICENCE  README.md  pyproject.toml
my_logger/my_logger/: logger.py
