[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-requests"
version = "0.1.0"
description = "Lightweight asynchronous GET/POST HTTP helper based on httpx."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Anton Didenko", email = "youremail@example.com" }
]
dependencies = [
    "httpx>=0.28.0"
]
keywords = ["async", "requests", "http", "httpx", "aiohttp", "python"]

# Optional but nice to have (shows up on PyPI)
[project.urls]
Homepage = "https://github.com/your_username/async_requests"
Repository = "https://github.com/your_username/async_requests"
Issues = "https://github.com/your_username/async_requests/issues"
