[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-requests"
version = "0.1.0"
description = "Lightweight asynchronous GET/POST HTTP helper based on httpx."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Anton Didenko", email = "didenk085.2014@gmail.com" }
]
dependencies = [
    "httpx>=0.28.0"
]
keywords = ["async", "requests", "http", "httpx", "aiohttp", "python"]

[project.urls]
Homepage = "https://github.com/Anton-Di/my_libs/tree/main/async_requests"
Repository = "https://github.com/Anton-Di/my_libs"
Issues = "https://github.com/Anton-Di/my_libs/issues"

